--- a/.env.test
+++ b/.env.test
@@ -22,4 +22,6 @@ MAILER_DSN=null://null
 
 ###> Weather API Configuration ###
 WEATHER_API_KEY=test_api_key
+WEATHER_API_URL=https://api.weatherapi.com/v1
+WEATHER_CACHE_MAX_AGE_MINUTES=30
 ###< Weather API Configuration ###
