--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,6 +4,9 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
+    weather_api_key: '%env(WEATHER_API_KEY)%'
+    weather_api_url: '%env(WEATHER_API_URL)%'
+    cache_ttl_minutes: 30
 
 services:
     # default configuration for services in *this* file
@@ -15,6 +18,30 @@ services:
     # this creates a service per class whose id is the fully-qualified class name
     App\:
         resource: '../src/'
+        exclude:
+            - '../src/DependencyInjection/'
+            - '../src/Entity/'
+            - '../src/Kernel.php'
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+    # Configure weather services with custom logger
+    App\Service\WeatherApiClient:
+        arguments:
+            $logger: '@monolog.logger.weather'
+            $apiKey: '%weather_api_key%'
+            $apiUrl: '%weather_api_url%'
+
+    App\Service\WeatherService:
+        arguments:
+            $logger: '@monolog.logger.weather'
+            $cacheMaxAgeMinutes: '%cache_ttl_minutes%'
+
+    App\Service\WeatherCacheService:
+        arguments:
+            $logger: '@monolog.logger.weather'
+
+    App\Controller\WeatherController:
+        arguments:
+            $weatherLogger: '@monolog.logger.weather'
